--- a/src/app/lookup/edit/region-edit.form.template.html
+++ b/src/app/lookup/edit/region-edit.form.template.html
@@ -1,4 +1,4 @@
-<div>
+<div [ngClass]="'formRow'">
     <div><label for="name" [ngClass]="'formLabel'">Scotch Region</label></div>
     <div><input type="text" id="name" [(ngModel)]="region.name"></div>
 </div>
