--- a/src/assets/partials/navbar/navbar.component.html
+++ b/src/assets/partials/navbar/navbar.component.html
@@ -2,5 +2,6 @@
     <button type="button" (click)="onClick('Cabinet')" label="Cabinet" [ngClass]="'button'">Cabinet</button>
     <button type="button" (click)="onClick('Wishlists')" label="Wishlists" [ngClass]="'button'">Wish Lists</button>
     <button type="button" (click)="onClick('Tastings')" label="Tastings" [ngClass]="'button'">Tastings</button>
+    <button type="button" (click)="onClick('Prices')" label="Price List" [ngClass]="'button'">Price List</button>
     <button type="button" (click)="onClick('Sign-Out')" label="Sign Out" [ngClass]="'button'">Sign out</button>
 </div>
