--- a/src/assets/partials/page-header/page-header.component.html
+++ b/src/assets/partials/page-header/page-header.component.html
@@ -7,6 +7,7 @@
 				<a (click)="onSelect('cabinet')"><i class="fa fa-folder-open-o"></i> Cabinet</a>
 				<a (click)="onSelect('tastings')"><i class="fa fa-glass"></i> Tastings</a>
 				<a (click)="onSelect('wishlists')"><i class="fa fa-file-text-o"></i> Wish Lists</a>
+				<a (click)="onSelect('prices')"><i class="fa fa-dollar"></i> Price List</a>
 				<hr>
 				<a (click)="onSelect('settings')"><i class="fa fa-gear"></i> Settings</a>
 				<hr>
