--- a/src/app/scotches/view/view.component.css
+++ b/src/app/scotches/view/view.component.css
@@ -13,7 +13,6 @@
     width: 50%;
 }
 
-
 .in-stock
 {
     font-size: 150%;
@@ -225,9 +224,6 @@ a:link, a:visited, a:active, a:hover
     visibility: visible;
 }
 
-
-
-
 /*** Third Party Tasting Popup ********************************/
 
 /* Tooltip container */
@@ -259,7 +255,16 @@ a:link, a:visited, a:active, a:hover
     visibility: visible;
 }
 
+/*** Prices Tab *************************/
 
+.currencyColumn {
+  text-align: right;
+  width: 75px;
+}
+
+.sizeColumn {
+  
+}
 
 
 /** Edit Dialog **/
