--- a/src/assets/partials/edit-dialog/edit-dialog.component.html
+++ b/src/assets/partials/edit-dialog/edit-dialog.component.html
@@ -1,6 +1,6 @@
 <!-- Edit Dialog -->
 
-<div id="editDialog" [ngClass]="'edit-dialog'">
+<div [id]="'editDialog' + type" [ngClass]="'edit-dialog'">
   <div [ngClass]="'edit-dialog-content'">
     <div [ngClass]="'dialog-header'">
       <span>{{dialogTitle}}</span>
@@ -18,6 +18,7 @@
       <!-- <app-signin-form [credentials]="editedObject" *ngIf="dialogType==='signin'"></app-signin-form> -->
       <app-style-edit-form [style]="editedObject" *ngIf="dialogType==='style'"></app-style-edit-form>
       <app-region-edit-form [region]="editedObject" *ngIf="dialogType==='region'"></app-region-edit-form>
+      <app-price-edit-form [price]="editedObject" *ngIf="dialogType==='price'"></app-price-edit-form>
     </div> <!-- end body -->
 
 
